<resources>
    <string name="app_name">ExpenseMonitor</string>
    <string name="lblWprowadzWydatki">Wprowadź wydatki</string>
    <string name="lblData">Data</string>
    <string name="lblGodzina">Godzina</string>
    <string name="lblMiejsce">Miejsce</string>
    <string name="btnAdd">Dodaj</string>
    <string name="hintEditDate">dd.mm.rrrr</string>
    <string name="hintEditTime">hh:mm:ss</string>
    <string name="lblKategoria">Kategoria</string>
    <string name="lblOpis">Opis</string>
    <string name="hintDescription">Podaj opis</string>
    <string name="btnAddExpense">Dodaj wydatek</string>
    <string name="btnEnterDetail">Wprowadź szczegóły</string>
    <string name="lblAmount">Kwota</string>
    <string name="hintEnterAmount">Wprowadź kwotę zakupu</string>
    <string name="lblDescription">Opis</string>
    <string name="btnFunction">Wybierz funkcje</string>
    <string name="menuExpenses">Wydatki</string>
    <string name="menuStatistics">Statystyka</string>
    <string name="menuLimits">Ograniczenia wydatków</string>
    <string name="btnCancel">Anuluj</string>
    <string name="btnSet">Ustaw</string>
    <string name="lblLimits">LIMITY</string>
    <string name="lblFunds">Fundusze</string>
    <string name="lvlVolume">Ilość</string>
    <string name="hintFunds">Wprowadź kwote</string>
    <string name="hintQuantity">Wprowadź ilość</string>
    <string name="ckbCategory">Tylko kat</string>
    <string name="hintTo">Do dd.mm.rrrr</string>
    <string name="hintFrom">Od dd.mm.rrrr</string>
    <string name="lblName">Nazwa</string>
    <string name="hintCategory">Podaj nazwę kategorii</string>
    <string name="hintProductName">Wprowadź nazwę produktu</string>
    <string name="lblChooseCategory">Wybierz categorię</string>
    <string name="lblDescriptionProducts">Opis produktu</string>
    <string name="hintDescriptionProdukt">Opis produktu</string>
    <string name="txtImplementName">Wprowadź nazwę produktu</string>
    <string name="txtChooseUnit">Wybierz jednostkę</string>
    <string name="btnAddProduct">Dodaj</string>
    <string name="btnCancelProduct">Anuluj</string>
    <string name="lvlDateProduct">Dane produktu</string>
    <string name="lblDateProducts">Dane Produktu</string>
    <string name="btnDateProduct">Dane Produktu</string>
    <string name="lvDateProduct">Dane Produktu</string>
    <string name="lvlCategoryPorductLimit">Kategoria Produktu</string>
    <string name="lblChooseProductLimit">Wybór produlktu</string>
    <string name="txtNameCategory">Nazwa</string>
    <string name="lblNmeCategory">Nazwa kategorii</string>
    <string name="lblDescriptionCategory">Opis kategorii</string>
    <string name="txtDescriptionNameCategory">Opis</string>
    <string name="btnCancelAddCategory">Anuluj</string>
    <string name="btnAdditionNewCategory">Dodaj</string>
    <string name="lblAddPlace">Nazwa miejsca</string>
    <string name="txtAddNamePlace">Nazwa</string>
    <string name="lblAddDescriptionPlace">Opis</string>
    <string name="txtDescriptionPlace">Opis miejsca</string>
    <string name="hintNamePlace">Nazwa</string>
    <string name="hintDescriptionPlace">Opis</string>
    <string name="lblRoadPlace">Ulica</string>
    <string name="hintRoadPlace">Ulica</string>
    <string name="lblNumberPlace">Numer budynku/lokalu</string>
    <string name="hintNumberPlace">Numer</string>
    <string name="lblCityPlace">Miejscowość</string>
    <string name="hintCityPlace">Miasto</string>
    <string name="lblCountryPlace">Kraj</string>
    <string name="hintCountryPlace">Państwo</string>
    <string name="btnAddAdditionPlace">Dodaj</string>
    <string name="btnCancelAdditionPlace">Anuluj</string>
    <string name="lblLimitExceeded">Przekroczyłeś limit</string>
    <string name="lblLimitExceededOn">Przekroczyłeś limit na:</string>
    <string name="hintLimitExceededReason">Przyczyna</string>
    <string name="btnLimitExceededOK">OK</string>
    <string name="lblSpending">Wydatki</string>
    <string name="lblCategoryExpense">Kategoria wydatku</string>
    <string name="btnAddCategoryCostDetails">Dodaj</string>
    <string name="lblProductExpenseDetails">Produkt wydatku</string>
    <string name="lblQuantityProductExpenseDetails">Ilość produktu</string>
    <string name="hintQuantityProductExpenseDetails">Ilość</string>
    <string name="lblPriceProductExpenseDetails">Cena produktu</string>
    <string name="hintPriceProductExpenseDetails">Cena</string>
    <string name="btnAddExpenseDetails">Dodaj</string>
    <string name="btnEndExpenseDetails">Zakończ</string>
    <string name="btnAddProductExpenseDetails">Dodaj</string>
    <string name="lblRemindAddDetailsExpense">Przypomnienie</string>
    <string name="hintRemindAddDetails">Przypomina się</string>
    <string name="btnLaunchRemindAddDetails">Wprowadź</string>
    <string name="btnLaterRemindDetails">Później</string>
    <string name="btnCancelReminderSettingsTwo">Anuluj</string>
    <string name="btnSetReminderSettingsTwo">Ustaw</string>
    <string name="lblDayHourMinutesReminderSettingsTwo">Dzień/Godzina/Minuta</string>
    <string name="hintNoteReminderSettingsTwo">Notatka</string>
    <string name="btnCycleReminderSettingsTwo">Cyklicznie</string>
    <string name="btnDayHourReminderSettingsTwo">Dzień/Godzina</string>
    <string name="hintTimeReminderSettingsTwo">Czas</string>
    <string name="btnCycleReminderSettings">Cyklicznie</string>
    <string name="btnDayHourReminderSettings">Dzień/Godzina</string>
    <string name="lblDataReminder">Data</string>
    <string name="lblHourReminder">Godzina</string>
    <string name="hintDateReminderSettings">Data</string>
    <string name="hintHourReminderSettings">Godzina</string>
    <string name="hintNoteReminderSettings">Notatka</string>
    <string name="btnSetReminderSettigns">Ustaw</string>
    <string name="btnCancelReminderSettings">Anuluj</string>
    <string name="btnPodzialWydatkow">Podział wydatków</string>
    <string name="btnChangePrice">Zmiana Cen</string>
    <string name="btnOverruns">Przekroczenia</string>
    <string name="btnChooseFunction">Wybierz Fukcje</string>
    <string name="lblFrom">Od</string>
    <string name="lblTo">Do</string>
    <string name="btnShow">Pokaż</string>
    <string name="btnClose">Zamknij</string>
    <string name="ckbLater">Wprowadź szczegóły później</string>
</resources>