<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/etSEDTo" />

    <EditText
        android:id="@+id/etSEDFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/hintFrom"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/etSEDTo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSEDFrom" />

    <EditText
        android:id="@+id/etSEDTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:ems="10"
        android:hint="@string/hintTo"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/btnSEDShow"
        app:layout_constraintStart_toEndOf="@+id/etSEDFrom"
        app:layout_constraintTop_toTopOf="@+id/etSEDFrom" />

    <Button
        android:id="@+id/btnSEDShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/btnShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSEDTo"
        app:layout_constraintTop_toTopOf="@+id/etSEDTo" />

    <TextView
        android:id="@+id/tvSEDFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="40dp"
        android:text="@string/lblFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSEDClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/btnClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chart" />

    <TextView
        android:id="@+id/tvSEDTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTo"
        app:layout_constraintStart_toStartOf="@+id/etSEDTo"
        app:layout_constraintTop_toTopOf="@+id/tvSEDFrom" />

</androidx.constraintlayout.widget.ConstraintLayout>