<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnSetReminderSettings"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/btnSetReminderSettigns"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoteReminderSettings" />

    <Button
        android:id="@+id/button18"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/btnCancelReminderSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSetReminderSettings"
        app:layout_constraintTop_toBottomOf="@+id/txtNoteReminderSettings" />

    <TextView
        android:id="@+id/txtNoteReminderSettings"
        android:layout_width="326dp"
        android:layout_height="264dp"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:hint="@string/hintNoteReminderSettings"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHourReminderSettings" />

    <Button
        android:id="@+id/btnDayHourReminderSettings"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:text="@string/btnDayHourReminderSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCycleReminderSettings"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCycleReminderSettings"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/btnCycleReminderSettings"
        app:layout_constraintEnd_toStartOf="@+id/btnDayHourReminderSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDataReminder"
        android:layout_width="136dp"
        android:layout_height="22dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:text="@string/lblDataReminder"
        app:layout_constraintEnd_toStartOf="@+id/tvHourReminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCycleReminderSettings" />

    <TextView
        android:id="@+id/tvHourReminder"
        android:layout_width="124dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:text="@string/lblHourReminder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDataReminder"
        app:layout_constraintTop_toBottomOf="@+id/btnDayHourReminderSettings" />

    <EditText
        android:id="@+id/etDateReminderSettings"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:hint="@string/hintDateReminderSettings"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/etHourReminderSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDataReminder" />

    <EditText
        android:id="@+id/etHourReminderSettings"
        android:layout_width="129dp"
        android:layout_height="51dp"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:ems="10"
        android:hint="@string/hintHourReminderSettings"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etDateReminderSettings"
        app:layout_constraintTop_toBottomOf="@+id/tvHourReminder" />
</androidx.constraintlayout.widget.ConstraintLayout>